AccessKit: fix stuck play/pause video indicators
fixes #513

--- a/src/scripts/accesskit.css
+++ b/src/scripts/accesskit.css
@@ -34,11 +34,6 @@ body.accesskit-blue-links article a[target="_blank"][href^="https://href.li/"] {
   color: rgb(var(--accent));
 }
 
-body.accesskit-disable-animations * {
-  animation: none !important;
-  transition: none !important;
-}
-
 body.accesskit-no-user-colours article span[style^="color"] {
   color: inherit !important;
 }
